--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -23,7 +23,7 @@
         <text>[New - Global Themes] Add way more color choices</text>
         <text>[New - Global Themes] Set the accent color separately from the primary color</text>
         <text>[New] White theme option and improvements for light theme support</text>
-        <text>[New] Select between the system default and the Android O emojis</text>
+        <text>[New] Select between the system default and the Android Oreo emojis</text>
         <text>[New] Copy parts of text messages, instead of the whole message</text>
         <text>[New] Edit recipients in group messages</text>
         <text>[New] Send messages from the Android TV app</text>
