--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="2.5.2"
+        description="August 24th, 2017">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="2.5.1"
         description="August 22nd, 2017">
         <text>Bug fixes</text>
