aparently job scheduler has a max of 100 jobs. Lets allow Pulse to schedule up to 50 of the mark as sent job

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -22,6 +22,7 @@
         <text>Improvements around contact syncing for the web version of Pulse</text>
         <text>Improvements around contact message colors in group conversations</text>
         <text>Bug fixes</text>
+        <text>Crash fixes</text>
     </version>
 
     <version
