--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,11 @@
 <changelog>
 
     <version
+        name="2.5.6"
+        description="September 5th, 2017">
+        <text>Fixes for receiving duplicate MMS on some carriers (please read the FAQ for information on what you need to do to prevent this)</text>
+    </version>
+    <version
         name="2.5.5"
         description="September 1st, 2017">
         <text>Bug fixes</text>
