handle long message threads: - limit conversations to the latest 8000 messages - if there is more than that, put a button in the conversation information page to view the full conversation - start up a new activity to display the MessageListFragment that doesn't have a message limit - All the messages are still searchable and the quick find by date will be fine on the message list without the limit.

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,7 +20,10 @@
         name="2.5.6"
         description="September 5th, 2017">
         <text>Fixes for receiving duplicate MMS on some carriers (please read the FAQ for information on what you need to do to prevent this)</text>
+        <text>Improve handling of extremely large conversations</text>
+        <text>Bug fixes</text>
     </version>
+    
     <version
         name="2.5.5"
         description="September 1st, 2017">
