some fixes for the new optimizations around extremely large message threads

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,8 @@
         description="September 5th, 2017">
         <text>Fixes for receiving duplicate MMS on some carriers (please read the FAQ for information on what you need to do to prevent this)</text>
         <text>Improve handling of extremely large conversations</text>
+        <text>Fix sharing contact cards from contacts app</text>
+        <text>Battery improvements</text>
         <text>Bug fixes</text>
     </version>
 
