add vibration pattern

--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -51,6 +51,7 @@
         <item>@string/vibrate_one_long</item>
         <item>@string/vibrate_one_extra_long</item>
         <item>@string/vibrate_two_short_one_long</item>
+        <item>@string/vibrate_one_long_one_short_one_long</item>
     </string-array>
 
     <string-array name="vibrate_values">
@@ -65,6 +66,7 @@
         <item>vibrate_one_long</item>
         <item>vibrate_one_extra_long</item>
         <item>vibrate_two_short_one_long</item>
+        <item>vibrate_one_long_one_short_one_long</item>
     </string-array>
 
     <string-array name="repeat">
