use the notification channel's ringtone if we are within a conversation when the notification arrives

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -26,6 +26,7 @@
         <text>New vibration pattern</text>
         <text>MMS improvements</text>
         <text>Battery improvements</text>
+        <text>Oreo optimizations</text>
         <text>FAQ improvements</text>
         <text>Theme fixes</text>
         <text>Bug fixes</text>
