begin the conversion to kotlin object for the account

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -16,11 +16,12 @@
 
 <changelog>
 
-    <!--<version-->
-        <!--name="2.5.7"-->
-        <!--description="September 16th, 2017">-->
-        <!--<text>Fix: some users were re-receiving group MMS messages that they sent to the group</text>-->
-    <!--</version>-->
+    <version
+        name="2.5.7"
+        description="September 16th, 2017">
+        <text>Fix: some users were re-receiving group MMS messages that they sent to the group</text>
+        <text>Other various bug fixes</text>
+    </version>
 
     <version
         name="2.5.6"
