fix some issues with the layout on landscape mode

--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -207,7 +207,7 @@
                 android:id="@+id/message_entry"
                 android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                 android:imeOptions="actionSend|flagNoExtractUi"
-                android:maxLines="5" />
+                android:maxLines="@integer/message_list_fragment_line_entry_count" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/send"
