--- a/shared/src/main/res/values-sw720dp/integers.xml
+++ b/shared/src/main/res/values-sw720dp/integers.xml
@@ -17,5 +17,6 @@
 <resources>
 
     <integer name="images_column_count">8</integer>
+    <integer name="message_list_fragment_line_entry_count">8</integer>
 
 </resources>
