make sure the navigation drawer menu items are single line and ellipsized

--- a/shared/src/main/res/layout/activity_messenger.xml
+++ b/shared/src/main/res/layout/activity_messenger.xml
@@ -102,6 +102,7 @@
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/navigation_drawer_conversations"
         app:itemTextColor="@drawable/drawer_text_selector"
-        app:itemIconTint="@drawable/drawer_icon_selector" />
+        app:itemIconTint="@drawable/drawer_icon_selector"
+        app:theme="@style/EllipsizeText" />
 
 </android.support.v4.widget.DrawerLayout>
