--- a/shared/src/main/res/values/styles.xml
+++ b/shared/src/main/res/values/styles.xml
@@ -85,4 +85,8 @@
         <item name="android:src">@drawable/ic_overflow</item>
     </style>
 
+    <style name="EllipsizeText">
+        <item name="android:ellipsize">end</item>
+    </style>
+
 </resources>
