--- a/shared/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/shared/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -49,7 +49,8 @@
             app:headerLayout="@layout/drawer_header"
             app:menu="@menu/navigation_drawer_conversations"
             app:itemTextColor="@drawable/drawer_text_selector"
-            app:itemIconTint="@drawable/drawer_icon_selector" />
+            app:itemIconTint="@drawable/drawer_icon_selector"
+            app:theme="@style/EllipsizeText" />
 
         <android.support.design.widget.CoordinatorLayout
             android:id="@+id/content"
