--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -24,6 +24,7 @@
         <text>Fix for some users re-receiving group MMS messages that they sent</text>
         <text>Landscape improvements</text>
         <text>Other various bug fixes</text>
+        <text>Improvements around Essential Phone</text>
     </version>
 
     <version
