--- a/api_implementation/src/main/res/values-pl/api_string.xml
+++ b/api_implementation/src/main/res/values-pl/api_string.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <!--
-  ~ Copyright (C) 2017 Luke Klinker
+  ~ Copyright (C) 2016 Jacob Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -44,6 +44,8 @@ Czy chcesz usunąć obecne urządzenie podstawowe i ustawić bieżące jako nowe
     <string name="api_activate_1">1</string>
     <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Przejdź do</string>
+    <string name="api_activate_wear">wear.klinkerapps.com</string>
+    <string name="api_activate_tv">tv.klinkerapps.com</string>
     <string name="api_activate_1_3">na urządzeniu przenośnym bądź komputerze.</string>
     <string name="api_activate_2_1">Na stronie internetowej</string>
     <string name="api_activate_2_2">wpisz kod po prawej stronie</string>
