--- a/api_implementation/src/main/res/values-zh-rCN/api_string.xml
+++ b/api_implementation/src/main/res/values-zh-rCN/api_string.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <!--
-  ~ Copyright (C) 2017 Luke Klinker
+  ~ Copyright (C) 2016 Jacob Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -26,6 +26,7 @@
     <string name="api_password_confirmation">密码确认</string>
     <string name="api_name">名字</string>
     <string name="api_phone_number">电话号码</string>
+    <string name="api_connecting">正在连接服务器…</string>
     <string name="api_device_error">添加设备出错啦！重试看看(・∀・)</string>
     <string name="api_yes">是</string>
     <string name="api_no">不</string>
@@ -41,6 +42,8 @@
     <string name="api_activate_1">1</string>
     <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">指向</string>
+    <string name="api_activate_wear">wear.klinkerapps.com</string>
+    <string name="api_activate_tv">tv.klinkerapps.com</string>
     <string name="api_activate_1_3">在一个移动设备或计算机上</string>
     <string name="api_activate_2_1">在网页上</string>
     <string name="api_activate_2_2">请在右边输入</string>
