--- a/shared/src/main/res/layout/message_image_received.xml
+++ b/shared/src/main/res/layout/message_image_received.xml
@@ -48,7 +48,7 @@
         <TextView
             android:id="@+id/contact"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/timestamp_height"
             android:layout_marginEnd="2dp"
             android:textColor="@color/secondaryText"
             android:textSize="12sp"
