--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         <!--description="October 10th, 2017">-->
         <!--<text>UI improvements for images and links</text>-->
         <!--<text>Allow attaching of a contact as plain text or vCard</text>-->
+        <!--<text>Improvements to the contact search UI when composing a new message</text>-->
     <!--</version>-->
 
     <version
