--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,14 +19,17 @@
     <!--<version-->
         <!--name="2.6.0"-->
         <!--description="October 10th, 2017">-->
+        <!--<text>New compose UI that allows you to search the contact groups defined in your contacts app</text>-->
         <!--<text>UI improvements for images and links</text>-->
         <!--<text>Allow attaching of a contact as plain text or vCard</text>-->
         <!--<text>Improvements to the contact search UI when composing a new message</text>-->
+        <!--<text>Prep work for future features</text>-->
+        <!--<text>Lots of bug fixes</text>-->
     <!--</version>-->
 
     <version
         name="2.5.8"
-        description="October 2nd, 2017">
+        description="October 7th, 2017">
         <text>Improve the initial message import</text>
         <text>Bug/crash/UI fixes</text>
         <text>Translation updates</text>
