improve the keyboard layout display for the enter key

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -30,6 +30,7 @@
     <version
         name="2.5.8"
         description="October 7th, 2017">
+        <text>Keyboard layout improvements</text>
         <text>Improve the initial message import</text>
         <text>Bug/crash/UI fixes</text>
         <text>Translation updates</text>
