fix keyboard when using the send key

--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -207,6 +207,7 @@
                 android:id="@+id/message_entry"
                 android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                 android:imeOptions="actionSend|flagNoExtractUi"
+                android:scrollHorizontally="false"
                 android:maxLines="@integer/message_list_fragment_line_entry_count" />
 
             <android.support.design.widget.FloatingActionButton
